# ve

./: .gitignore  COPYING.LESSER  Makefile.am  README  autogen.sh  configure.in
include/: vtcp.h
libvtcp/: Makefile.am  vtcp.cpp
tests/: Makefile.am  bind.cpp  connect.cpp
vtcpd/: Makefile.am  daemon.cpp  daemon.hpp  vtcpd.cpp
